--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-easy-swipe": "^0.0.23",
     "react-icons": "^4.12.0",
-    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
