--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "data-crypto": "^1.4.4",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
