--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-easy-swipe": "^0.0.23",
     "react-icons": "^4.12.0",
+    "react-tooltip": "^5.26.4",
     "styled-components": "^6.1.6"
   },
   "devDependencies": {
