--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-     "postbuild": "next-sitemap",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.3",
+    "next": "^14.2.5",
     "next-cloudinary": "^6.6.2",
     "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-easy-swipe": "^0.0.23",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-tooltip": "^5.26.4",
-    "styled-components": "^6.1.6"
+    "styled-components": "^6.1.6",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
