--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "html2pdf.js": "^0.10.2",
     "next": "^14.2.5",
     "next-cloudinary": "^6.6.2",
     "next-sitemap": "^4.2.3",
